#!/usr/bin/env python3
"""
æ›´æ–°ç¬¬äºŒæ‰¹è¿ç§»çŠ¶æ€
"""

import sqlite3
from pathlib import Path
from datetime import datetime

class MigrationStatusUpdater:
    """è¿ç§»çŠ¶æ€æ›´æ–°å™¨"""
    
    def __init__(self, db_path: str):
        self.db_path = db_path
        self.project_root = Path('/home/pix/dev/code/java/DnfGameServer')
    
    def _connect(self):
        """è¿æ¥åˆ°æ•°æ®åº“"""
        return sqlite3.connect(self.db_path)
    
    def add_batch(self, batch_number: int, batch_name: str, description: str):
        """æ·»åŠ æ‰¹æ¬¡"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            INSERT OR REPLACE INTO migration_batches (batch_number, batch_name, description, status, start_time, end_time)
            VALUES (?, ?, ?, 'in_progress', ?, NULL)
        ''', (batch_number, batch_name, description, datetime.now()))
        
        conn.commit()
        conn.close()
        
        print(f"âœ… æ·»åŠ æ‰¹æ¬¡: {batch_number} - {batch_name}")
    
    def add_migration_record(self, batch_number: int, jprotobuf_message: str, proto_message: str, 
                            proto_file: str, status: str = 'completed'):
        """æ·»åŠ è¿ç§»è®°å½•"""
        conn = self._connect()
        cursor = conn.cursor()
        
        # è·å– JProtobuf æ¶ˆæ¯ ID
        cursor.execute('SELECT id FROM jprotobuf_messages WHERE message_name = ?', (jprotobuf_message,))
        jprotobuf_row = cursor.fetchone()
        
        if not jprotobuf_row:
            print(f"âš ï¸  æœªæ‰¾åˆ° JProtobuf æ¶ˆæ¯: {jprotobuf_message}")
            conn.close()
            return
        
        jprotobuf_id = jprotobuf_row[0]
        
        # è·å–æ ‡å‡† Protobuf æ¶ˆæ¯ ID
        cursor.execute('SELECT id FROM proto_messages WHERE message_name = ?', (proto_message,))
        proto_row = cursor.fetchone()
        
        if not proto_row:
            print(f"âš ï¸  æœªæ‰¾åˆ°æ ‡å‡† Protobuf æ¶ˆæ¯: {proto_message}")
            conn.close()
            return
        
        proto_id = proto_row[0]
        
        # æ·»åŠ è¿ç§»è®°å½•
        cursor.execute('''
            INSERT INTO migration_records (batch_id, jprotobuf_message_id, proto_message_id, migration_status)
            VALUES (?, ?, ?, ?)
        ''', (batch_number, jprotobuf_id, proto_id, status))
        
        # æ›´æ–°æ˜ å°„å…³ç³»
        cursor.execute('''
            INSERT OR REPLACE INTO message_mappings 
            (jprotobuf_message_id, proto_message_id, mapping_type, mapping_confidence, is_verified)
            VALUES (?, ?, 'direct_mapping', 1.0, 1)
        ''', (jprotobuf_id, proto_id))
        
        conn.commit()
        conn.close()
        
        print(f"âœ… æ·»åŠ è¿ç§»è®°å½•: {jprotobuf_message} -> {proto_message}")
    
    def add_proto_message(self, message_name: str, file_path: str, package_name: str, field_count: int):
        """æ·»åŠ æ ‡å‡† Protobuf æ¶ˆæ¯"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            INSERT OR REPLACE INTO proto_messages 
            (message_name, file_path, package_name, field_count, is_nested, parent_message)
            VALUES (?, ?, ?, ?, 0, NULL)
        ''', (message_name, file_path, package_name, field_count))
        
        conn.commit()
        conn.close()
        
        print(f"âœ… æ·»åŠ æ ‡å‡† Protobuf æ¶ˆæ¯: {message_name}")
    
    def update_batch_status(self, batch_number: int, status: str):
        """æ›´æ–°æ‰¹æ¬¡çŠ¶æ€"""
        conn = self._connect()
        cursor = conn.cursor()
        
        if status == 'completed':
            cursor.execute('''
                UPDATE migration_batches 
                SET status = ?, end_time = ?
                WHERE batch_number = ?
            ''', (status, datetime.now(), batch_number))
        else:
            cursor.execute('''
                UPDATE migration_batches 
                SET status = ?
                WHERE batch_number = ?
            ''', (status, batch_number))
        
        conn.commit()
        conn.close()
        
        print(f"âœ… æ›´æ–°æ‰¹æ¬¡çŠ¶æ€: {batch_number} -> {status}")

def main():
    """ä¸»å‡½æ•°"""
    db_path = '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/data/migration_system.db'
    updater = MigrationStatusUpdater(db_path)
    
    print("ğŸ“ æ›´æ–°ç¬¬äºŒæ‰¹è¿ç§»çŠ¶æ€...")
    print()
    
    # æ·»åŠ æ‰¹æ¬¡
    print("1. æ·»åŠ æ‰¹æ¬¡...")
    updater.add_batch(2, 'CHARACTER', 'CHARACTER æ¨¡å—è¿ç§» - P1 ä¼˜å…ˆçº§')
    print()
    
    # æ·»åŠ æ ‡å‡† Protobuf æ¶ˆæ¯
    print("2. æ·»åŠ æ ‡å‡† Protobuf æ¶ˆæ¯...")
    updater.add_proto_message('CharacterGuid', 'proto/dnf/v1/character.proto', 'dnf.v1', 4)
    updater.add_proto_message('CharacterInfoRequest', 'proto/dnf/v1/character.proto', 'dnf.v1', 3)
    updater.add_proto_message('CharacterStatInfoRequest', 'proto/dnf/v1/character.proto', 'dnf.v1', 30)
    updater.add_proto_message('CharacterFrameTabListRequest', 'proto/dnf/v1/character.proto', 'dnf.v1', 0)
    updater.add_proto_message('CharacterGuildRedpacketInfoRequest', 'proto/dnf/v1/character.proto', 'dnf.v1', 0)
    updater.add_proto_message('CharacterSlotChangeRequest', 'proto/dnf/v1/character.proto', 'dnf.v1', 0)
    print()
    
    # æ·»åŠ è¿ç§»è®°å½•
    print("3. æ·»åŠ è¿ç§»è®°å½•...")
    updater.add_migration_record(2, 'REQ_CHARACTER_INFO', 'CharacterInfoRequest', 'proto/dnf/v1/character.proto')
    updater.add_migration_record(2, 'REQ_CHARACTER_STAT_INFO', 'CharacterStatInfoRequest', 'proto/dnf/v1/character.proto')
    updater.add_migration_record(2, 'REQ_CHARACTER_FRAME_TAB_LIST', 'CharacterFrameTabListRequest', 'proto/dnf/v1/character.proto')
    updater.add_migration_record(2, 'REQ_CHARACTER_GUILD_REDPACKET_INFO', 'CharacterGuildRedpacketInfoRequest', 'proto/dnf/v1/character.proto')
    updater.add_migration_record(2, 'REQ_CHARACTER_SLOT_CHANGE', 'CharacterSlotChangeRequest', 'proto/dnf/v1/character.proto')
    print()
    
    # æ›´æ–°æ‰¹æ¬¡çŠ¶æ€
    print("4. æ›´æ–°æ‰¹æ¬¡çŠ¶æ€...")
    updater.update_batch_status(2, 'completed')
    print()
    
    print("âœ… ç¬¬äºŒæ‰¹è¿ç§»çŠ¶æ€æ›´æ–°å®Œæˆï¼")

if __name__ == '__main__':
    main()
